--- a/BreezeMvcAngularSpaTemplateVsix/ProjectTemplates/BreezeNgMvcSpaProjectTemplate.cshtml/Content/TodoList.css
+++ b/BreezeMvcAngularSpaTemplateVsix/ProjectTemplates/BreezeNgMvcSpaProjectTemplate.cshtml/Content/TodoList.css
@@ -65,6 +65,7 @@
 
     .todoList a {
         color: silver;
+        cursor: pointer;
         text-decoration: none;
         font: .8em verdana;
     }
@@ -88,3 +89,20 @@
 .todoItemInput::-ms-clear {
     display: none;
 }
+
+a.pageLink {
+    color: silver;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.logEntries {
+    display: inline-block;
+    text-align: left;
+    width: 24em; 
+}
+    .logEntries ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    }
