--- a/BreezeMvcAngularSpaTemplateVsix/ProjectTemplates/BreezeNgMvcSpaProjectTemplate.cshtml/Views/Shared/_Layout.SinglePage.cshtml
+++ b/BreezeMvcAngularSpaTemplateVsix/ProjectTemplates/BreezeNgMvcSpaProjectTemplate.cshtml/Views/Shared/_Layout.SinglePage.cshtml
@@ -23,7 +23,7 @@
         <footer>
             <nav>
                 <ul id="menu">
-                    <li>@Html.ActionLink("Todo List", "Index", "Home", new { area = "" }, null)</li>
+                    @*<li>@Html.ActionLink("Todo List", "Index", "Home", new { area = "" }, null)</li>*@
                     <li>@Html.ActionLink("API", "Index", "Help", new { area = "HelpPage" }, null)</li>
                 </ul>
             </nav> 
